--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -96,13 +96,16 @@ textarea{resize:none;}
     justify-content: center;
     align-items: center;
     width: 15%;
+    height: auto;
+    min-height: 56.2px;
     padding: 1.5%
 }
 .quntouxiang>img{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: auto;
+    height: 100%;
+    /* height: auto; */
     border-radius: 4px;
 }
 .qunxiangxi{
